fix footer spacing, wording and alignment

--- a/assets/css/override.css
+++ b/assets/css/override.css
@@ -37,6 +37,8 @@ footer {
 }
 .footer-link {
     font-size: 0.8em;
+    line-height: 1.5rem;
+    text-align: center;
     margin: 2.5rem 0;
     color: #454545
 }
